@@ -29,6 +29,11 @@ List only dependencies which are unsatisfied.
 
 Also display the required versions of listed modules.
 
+=head2 --json
+
+Lists all prerequisites in JSON format, as they would appear in META.json
+(broken out into phases and types)
+
 =head1 ACKNOWLEDGEMENTS
 
 This code was originally more or less a direct copy of Marcel Gruenauer (hanekomu)
@@ -44,11 +49,12 @@ sub abstract { "print your distribution's prerequisites" }
 sub opt_spec {
   [ 'author', 'include author dependencies' ],
   [ 'missing', 'list only the missing dependencies' ],
-  [ 'versions', 'include required version numbers in listing' ]
+  [ 'versions', 'include required version numbers in listing' ],
+  [ 'json', 'list dependencies by phase, in JSON format' ],
 }
 
-sub extract_dependencies {
-  my ($self, $zilla, $phases, $missing) = @_;
+sub prereqs {
+  my ($self, $zilla) = @_;
 
   $_->before_build for @{ $zilla->plugins_with(-BeforeBuild) };
   $_->gather_files for @{ $zilla->plugins_with(-FileGatherer) };
@@ -56,9 +62,16 @@ sub extract_dependencies {
   $_->munge_files  for @{ $zilla->plugins_with(-FileMunger) };
   $_->register_prereqs for @{ $zilla->plugins_with(-PrereqSource) };
 
+  my $prereqs = $zilla->prereqs;
+}
+
+sub extract_dependencies {
+  my ($self, $zilla, $phases, $missing) = @_;
+
+  my $prereqs = $self->prereqs($zilla);
+
   require CPAN::Meta::Requirements;
   my $req = CPAN::Meta::Requirements->new;
-  my $prereqs = $zilla->prereqs;
 
   for my $phase (@$phases) {
     $req->add_requirements( $prereqs->requirements_for($phase, 'requires') );
@@ -94,6 +107,15 @@ sub execute {
 
   my @phases = qw(build test configure runtime);
   push @phases, 'develop' if $opt->author;
+
+  if($opt->json) {
+    my $prereqs = $self->prereqs($self->zilla);
+    my $output = $prereqs->as_string_hash;
+
+    require JSON; JSON->VERSION(2);
+    print JSON->new->ascii(1)->canonical(1)->pretty->encode($output), "\n";
+    return 1;
+  }
 
   my %modules = $self->extract_dependencies($self->zilla, \@phases, $opt->missing);
 
