@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          add 'dzil listdeps --json', which lists all prerequisites broken up
+          by phase and type, in readable JSON format (thanks, Karen Etheridge!)
 
 4.300030  2013-01-30 22:25:27 America/New_York
           listdeps --versions now sorts properly (thanks, Karen Etheridge!)
